Version 0.3d by fordfoes *** UPDATE *** -Немного переделана логика прокерки старшей карты